--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,7 +15,7 @@
     <ion-header-bar class="sidemenuHeader bar-stable">
       <div class="row">
         <div class="col col-10" ng-if="userData.account"><div>{{userData.account.fullName.charAt(0)}}</div></div>
-        <div class="col col-10" ng-if="!userData.account"><div>G</div></div>
+        <div class="col col-10" ng-if="!userData.account"><div></div></div>
         <div class="col col-70">
           <h3 translate="HELLO"> <span><span></h3>
           <h5 ng-if="userData.account">{{userData.account.fullName}}</h5>
